# scripts

./: FernetGenKey.py  README.md  calc.py  copy.py  download_check.py  goto.py  music.py  neofetch.sh  nums.py  pyproject.toml  theme.sh  yt.py
Backup_bot/: backup_script.sh  main.py
scripts/: theme.sh
