[project]
name = "scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "GL1KK",email = "danya_serov05@internet.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "pytube (>=15.0.0,<16.0.0)",
    "yt-dlp (>=2025.9.5,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
